Add appveyor badge and Cargo integration

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,5 @@ authors = ["Gabriel Majeri <gabriel.majeri6@gmail.com>"]
 
 # Info about CI services.
 travis-ci = { repository = "https://travis-ci.org/GuildMasterInfinite/block-compression-rs/" }
+appveyor = { repository = "https://ci.appveyor.com/project/GuildMasterInfinite/block-compression-rs" }
 codecov = { repository = "https://codecov.io/gh/GuildMasterInfinite/block-compression-rs" }
