--- a/appveyor.yml
+++ b/appveyor.yml
@@ -88,6 +88,10 @@ matrix:
   allow_failures:
     - channel: nightly
 
+## Caching
+cache:
+  - 'C:\Users\appveyor\.cargo'
+
 ## Install Script ##
 
 # This is the most important part of the Appveyor configuration. This installs the version of Rust
