--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,6 @@ addons:
       - kcov
 
 after_success:
-  - for file in target/debug/block_compression-*[^\.d]; do mkdir -p "target/cov/$(basename $file)"; kcov --exclude-pattern=/.cargo,/usr/lib --verify "target/cov/$(basename $file)" "$file"; done &&
+  - for file in target/debug/block_compression-*[^\.d]; do mkdir -p "target/cov/$(basename $file)"; kcov --exclude-pattern=/.cargo,/usr/lib --verify "target/cov/$(basename $file)" "$file"; done
   - bash <(curl -s https://codecov.io/bash)
   - echo "Uploaded code coverage"
