--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,3 +22,8 @@ bitflags = "0.9.1"
 serde = "^1.0"
 serde_derive = "^1.0"
 bincode = "0.8.0"
+
+[dev-dependencies.image]
+version = "0.14"
+default-features = false
+features = ["bmp"]
