Add Git LFS support to Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,15 @@ matrix:
   allow_failures:
     - rust: nightly
 
+addons:
+  apt:
+    sources:
+    - sourceline: 'ppa:git-core/ppa'
+    packages:
+    - git-lfs
+
+install:
+  git lfs install
+
 cache:
   - cargo
