Remove install step for Git LFS
It seems `Trusty` containers already have Git LFS installed.

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,15 +11,4 @@ matrix:
   allow_failures:
     - rust: nightly
 
-addons:
-  apt:
-    sources:
-    - sourceline: 'ppa:git-core/ppa'
-    packages:
-    - git-lfs
-
-install:
-  git lfs install
-
-cache:
-  - cargo
+cache: cargo
